# swagger/swagger.json
@@ -19,6 +19,9 @@
   "paths": {
     "/get_users": {
       "get": {
+        "tags": [
+          "get_users"
+        ],
         "operationId": "get_users",
         "summary": "Единое окно",
         "description": "REST API приложения Единое окно",
@@ -75,6 +78,9 @@
     },
     "/set_users": {
       "post": {
+        "tags": [
+          "set_users"
+        ],
         "operationId": "set_users",
         "summary": "Create a JSONPlaceholder user.",
         "security": [
@@ -118,7 +124,10 @@
     },
     "/set_users1": {
       "post": {
-        "operationId": "set_users1",
+        "tags": [
+          "set_users"
+        ],
+        "operationId": "SetUsers1",
         "summary": "Create a JSONPlaceholder user.",
         "security": [
           {
